--- a/.github/workflows/update-domes-json.yml
+++ b/.github/workflows/update-domes-json.yml
@@ -1,30 +1,33 @@
-name: Update Domes
+name: Update Domes JSON
 
 on:
   push:
     paths:
-      - 'dome/**'    # Trigger on changes inside dome folder
+      - 'dome/**'
 
 jobs:
   update-json:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Generate domes.json
         run: |
           files=$(find dome -maxdepth 1 -type f -iname '*.jpg' -printf '%f\n' | sort)
           json=$(printf '%s\n' "$files" | jq -R . | jq -s .)
-          echo $json > dome/domes.json
-          echo "Generated domes.json with files:"
+          echo "$json" > dome/domes.json
+          echo "Generated dome/domes.json:"
           cat dome/domes.json
 
       - name: Commit & push if changed
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
           git add dome/domes.json
           if ! git diff --cached --quiet; then
             git commit -m "Update domes.json via GitHub Action"
